fetch all data, not only urls